<resources>
    <string name="app_version_name">0.2.2</string>
    <string name="facebook_app_test_id">842999912412097</string>
    <string name="facebook_app_id">842551369123618</string>
    <string name="logentries_key">6036cb0d-331d-4124-8245-e93f91de1388</string>
    <string name="app_name">Yamm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_battle">BattleActivity</string>
    <string name="title_activity_battle_result">BattleResult</string>
    <string name="title_activity_join">서비스 가입</string>
    <string name="title_activity_login">로그인</string>
    <string name="title_activity_friend">얌친 목록</string>
    <string name="title_activity_grid">못먹는 음식 선택</string>
    <string name="title_activity_invite">친구 초대</string>
    <string name="title_activity_group_recommendation">그룹 추천</string>
    <string name="title_activity_poke">친구랑 같이 먹기</string>
    <string name="title_activity_poke_alert">친구랑 같이 먹어요</string>
    <string name="title_activity_new_join">가입하기</string>
    <string name="title_activity_map">음식점 찾기</string>
    <string name="title_activity_place">음식점 정보</string>
    <string name="title_fragment_phone_auth">휴대폰 인증</string>
    <string name="network_error_message">인터넷 연결이 안됬거나 불안정합니다</string>
    <string name="location_error">위치를 확인할 수가 없습니다\n위치 정보가 켜져있어야 검색이 가능합니다</string>
    <string name="gps_accuracy_warning_text">GPS가 부정확합니다</string>
    <string name="login_authentication_error_message">전화번호나 비밀번호가 틀렸습니다</string>
    <string name="join_error_message">잘못된 정보가 있습니다. 확인해주세요</string>
    <string name="phone_number_error_message">전화번호 형식이 잘못되었습니다</string>
    <string name="verification_error_message">문자전송에 실패했습니다.\n번호를 확인하고 다시 시도해주세요</string>
    <string name="unidentified_error_message">인터넷 연결이 안됬거나 불안정합니다.\n다시 시도해주세요</string>
    <string name="duplicate_account_error_message">이미 같은 휴대폰 번호로 가입되어 있습니다</string>
    <string name="duplicate_oauth_account_error_message">이미 같은 페북이나 카톡 계정으로 가입되어 있습니다</string>
    <string name="invalid_token_error_message">페북이나 카톡 인증이 잘못되었습니다.\n다시 시도해주세요</string>
    <string name="incorrect_authcode_error_message">인증번호를 다시 확인하세요</string>
    <string name="email_format_error_message">잘못된 이메일 형식입니다</string>
    <string name="password_format_error_message">비밀번호에 숫자나 특수문자가 포함되어야 합니다</string>
    <string name="password_min_error_message">비밀번호는 최소한 8자이어야 합니다</string>
    <string name="invalid_token_error">다시 한번 로그인해주세요</string>
    <string name="wtf_error_handle_message">죄송합니다, 오류가 있어 재시작하였습니다</string>
    <string name="fb_login_duplicate_error_message">같은 이메일로 가입돼 있습니다\n로그인 후 페북 연동을 해주시기 바랍니다</string>
    <string name="fb_invalid_token_message">페이스북에서 올바른 정보를 불러오지 못했습니다</string>
    <string name="location_api_error">GPS를 활성화해야 현재 위치를 알 수 있습니다</string>
    <string name="geocoding_error">해당 장소를 찾을 수 없었습니다</string>
    <string name="GRID_RESULT">GRID</string>
    <string name="PREVIOUS_ACTIVITY">ACTIVITY</string>
    <string name="PREVIOUS_ACTIVITY_INTRO">IntroActivity</string>
    <string name="PREVIOUS_ACTIVITY_BATTLE">BattleActivity</string>
    <string name="PREVIOUS_ACTIVITY_JOIN">JoinActivity</string>
    <string name="PREVIOUS_ACTIVITY_MAIN">MainActivity</string>
    <string name="PREVIOUS_ACTIVITY_LOGIN">LoginActivity</string>
    <string name="PREVIOUS_ACTIVITY_GRID">GridActivity</string>
    <string name="PREVIOUS_ACTIVITY_INVITE">FriendActivity</string>
    <string name="PREVIOUS_ACTIVITY_FRIEND">InviteActivity</string>
    <string name="PREVIOUS_ACTIVITY_PHONE">PhoneAuthActivity</string>
    <string name="BATTLE_RESULTS">battleitems</string>
    <string name="CONTACT_READ_TIME">contact</string>
    <string name="PHONE_NAME_MAP">phonenamemap</string>
    <string name="AUTH_TOKEN">authtoken</string>
    <string name="FRIEND_LIST">friendlist</string>
    <string name="PREV_DISHES">prevdish</string>
    <string name="PREV_END_OF_RECOMMENDATION_PERSONAL">endpersonal</string>
    <string name="PREV_END_OF_RECOMMENDATION_GROUP">endgroup</string>
    <string name="dialog_positive_formal">확인</string>
    <string name="dialog_negative_formal">취소</string>
    <string name="dialog_positive">네</string>
    <string name="dialog_negative">아니오</string>
    <string name="internet_alert_title">인터넷?</string>
    <string name="internet_alert_message">인터넷 연결이 필요합니다</string>
    <string name="internet_alert_button">재시도</string>
    <string name="meal_picker_dialog_title">설마 아침부터...</string>
    <string name="invalid_date_message">오늘 이후의 날짜를 입력해주세요</string>
    <string name="invalid_date_title">과거</string>
    <string name="progress_dialog_message">잠시만 기다려주십시오</string>
    <string name="join_progress_dialog_title">가입 처리 중입니다\n조금만 기다려주세요</string>
    <string name="new_recommendation_message">당신 취향에 맞는 새로운 추천입니다</string>
    <string name="join_success">가입이 완료되었습니다</string>
    <string name="join_welcome_message">Yamm에 가입되었습니다\n버튼을 눌러 추천을 받으시거나\n검색으로 무엇을 먹을지 골라보세요</string>
    <string name="fb_dialog_title">좋아요 해주세요</string>
    <string name="fb_dialog_message">Yamm 페이스북에 좋아요를 누르면 더 많은 정보와 소식을 알려드려요! 다양한 이벤트와 재밌거리를 위해 페이스북 라이크 고고!!</string>
    <string name="fb_dialog_negative">싫어요</string>
    <string name="fb_dialog_positive">좋아요</string>
    <string name="fb_dialog_neutral">나중에요</string>
    <string name="dish_dislike_title">오늘은 그닥...</string>
    <string name="dish_dislike_message">별로 안 땡기시나요?</string>
    <string name="dish_dislike_negative">취소</string>
    <string name="dish_dislike_positive">안 땡겨요</string>
    <string name="dish_dislike_toast">그럼 딴거 드릴게요</string>
    <string name="dish_too_many_dislike_toast">더이상 드릴 메뉴가 없어요</string>
    <string name="dialog_main">당신의 입맛에 맞는 메뉴를\n고르고 있습니다\n\n4개의 메뉴를 추천해드릴게요</string>
    <string name="map_dialog_title">어디서 먹을꺼에요?</string>
    <string name="map_dialog_positive">찾아줘!</string>
    <string name="place_pick_title">음식점 검색</string>
    <string name="place_pick_message">드시고 싶은 위치에서 음식점을 검색해 보세요.</string>
    <string name="search_button">검색</string>
    <string name="dish_search_pick_title">음식 선택</string>
    <string name="dish_search_pick_message">먹고 싶은 음식을 골라주세요</string>
    <string name="dish_search_dialog_positive">찾아줘!</string>
    <string name="no_matching_dish_error">해당 음식을 검색할 수 없습니다</string>
    <string name="password_change_dialog_title">비밀번호 변경</string>
    <string name="intro_join_button">가입하기</string>
    <string name="intro_login_text">이미 회원이신가요? 로그인</string>
    <string name="intro_start_button">Yamm 바로 시작</string>
    <string name="phone_auth_back_dialog_message">가입 과정이 아직 끝나지 않았습니다\n처음부터 다시 시작하시겠습니까?</string>
    <string name="phone_auth_fragment_back_dialog_message">가입 과정이 아직 끝나지 않았습니다\n뒤로 돌아가시겠습니까?</string>
    <string name="phone_auth_request_button">Yamm 가입하기</string>
    <string name="phone_question_message">휴대폰 번호를 통해 친구들을 초대하고\n같이 먹을 메뉴를 추천받을 수 있습니다</string>
    <string name="phone_auth_title_message">으로\n인증번호를 보냈습니다.</string>
    <string name="grid_introduction">절대로 못먹는 음식이 있으면 선택하세요.</string>
    <string name="grid_checkbox_text">나는 채식주의자 얌</string>
    <string name="grid_all_button">못 먹는 것 없어요</string>
    <string name="grid_empty_text">로딩 중 입니다</string>
    <string name="grid_all_button_finish">다 골랐어요</string>
    <string name="grid_dialog_title">어디 가요</string>
    <string name="grid_dialog_message">아직 가입 절차가 남았습니다.\n금방 끝나는데 정말 종료하시겠습니까?</string>
    <string name="battle_dialog_message">배틀을 종료하시겠습니까?</string>
    <string name="battle_dialog_title">왜 하다말고</string>
    <string name="battle_none_button">둘다 싫어</string>
    <string name="battle_intro_dialog">당신의 입맛을 알아내기 위해\n음식 배틀을 준비했어요\n좋아하는 음식을 골라주세요</string>
    <string name="battle_loading_toast">로딩 중입니다</string>
    <string name="battle_intro_button">시 작</string>
    <string name="check_app_version_message">Yamm의 새로운 버전이 출시되었습니다\n업데이트하시겠습니까?</string>
    <string name="fb_join_text">페이스북으로 로그인</string>
    <string name="kakao_join_text">카카오톡으로 로그인</string>
    <string name="phone_question_button">\?</string>
    <string name="verification_field">인증번호</string>
    <string name="verification_name">이름</string>
    <string name="verification_email">이메일 주소</string>
    <string name="verification_pw">비번(8자이상,특수문자/숫자 포함)</string>
    <string name="verification_pw_2">비번 확인</string>
    <string name="verification_phone">전화번호</string>
    <string name="verification_button">인증</string>
    <string name="verification_sent">3분간 유효한 인증번호가 발송되었습니다</string>
    <string name="verification_resend_button">재전송</string>
    <string name="verification_resend_dialog_message">인증 문자를 다시 보낼까요?</string>
    <string name="verification_resend_dialog_title">재전송?</string>
    <string name="verification_dialog_title">전화번호 인증</string>
    <string name="verification_dialog_message">이 번호로 인증번호를 보내겠습니다</string>
    <string name="agreement_textview">서비스 약관과 개인정보 보호정책에 동의합니다.</string>
    <string name="join_checkbox_message">서비스 약관와 개인정보 보호정책에 동의하시나요?</string>
    <string name="verification_done_message">인증되었습니다</string>
    <string name="join_confirm_button">가입하기</string>
    <string name="verification_pw_not_identical">비밀번호가 일치하지 않습니다</string>
    <string name="login_button">로그인하기</string>
    <string name="login_pw">비밀번호</string>
    <string name="forgot_password"><u>비밀번호를 모르겠어요</u></string>
    <string name="forgot_password_no_phone">올바른 전화번호를 적어주세요</string>
    <string name="forgot_password_dialog_title">비밀번호 재설정</string>
    <string name="forgot_password_dialog_message">비밀번호를 재설정하겠습니다\n입력하신 전화번호가 정확한가요?</string>
    <string name="forgot_password_sent">해당 번호로 문자가 보내졌습니다\n곧 다시 뵙길 바래요</string>
    <string name="friend_pick_button">얌친들과 함께 먹을 음식추천</string>
    <string name="friend_pick_edit_text">같이 먹을 사람을 선택하세요</string>
    <string name="friend_not_loaded_message">로딩 중입니다</string>
    <string name="logout_dialog_title">로그아웃?</string>
    <string name="logout_dialog_message">로그아웃 하시겠습니까?</string>
    <string name="drawer_open">사이드 메뉴를 여시겠습니까?</string>
    <string name="drawer_close">사이드 메뉴를 닫으시겠습니까?</string>
    <string name="left_drawer_logout">로그아웃</string>
    <string name="left_drawer_pw">비밀번호</string>
    <string name="left_drawer_change_pw">설정</string>
    <string name="left_drawer_change_phone">기기변경</string>
    <string name="left_drawer_alarm_title">알림</string>
    <string name="left_drawer_alarm_status_positive">사용중</string>
    <string name="left_drawer_alarm_status_negative">정지됨</string>
    <string name="left_drawer_fb_title">페이스북</string>
    <string name="left_drawer_connect_status_positive">해제</string>
    <string name="left_drawer_connect_status_negative">연동</string>
    <string name="left_drawer_kakao_title">카카오톡</string>
    <string name="left_drawer_help">도움말</string>
    <string name="left_drawer_not_ready">아직 준비 중입니다ㅠㅠ</string>
    <string name="password_change_success">비밀번호가 변경되었습니다</string>
    <string name="fb_disconnect_success">페이스북 연동이 해제되었습니다</string>
    <string name="fb_disconnect_failure">페이스북 연동을 해제하지 못했습니다\n다시 한번 해주세요</string>
    <string name="fb_connect_success">페이스북이 연동되었습니다</string>
    <string name="fb_connect_failure">페이스북으로부터 정보를 불러오지 못했습니다\n다시 한번 해주세요</string>
    <string name="kakao_disconnect_success">카톡 연동이 해제되었습니다</string>
    <string name="kakao_disconnect_failure">카톡 연동을 해제하지 못했습니다\n다시 한번 해주세요</string>
    <string name="kakao_connect_success">카톡이 연동되었습니다</string>
    <string name="kakao_connect_failure">카톡으로부터 정보를 불러오지 못했습니다\n다시 한번 해주세요</string>
    <string name="login_success">로그인되었습니다</string>
    <string name="fb_join_success">페이스북으로 시작되었습니다</string>
    <string name="kakao_join_success">카카오톡으로 시작되었습니다</string>
    <string name="oauth_login_failure">가입되지 않은 계정입니다\n먼저 가입해주세요</string>
    <string name="poke_alert_confirm">닫기</string>
    <string name="poke_alert_negative">딴거 먹자</string>
    <string name="poke_alert_positive">좋아</string>
</resources>