<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="342dp" android:layout_height="237dp"
    android:background="@android:color/transparent">
    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="342dp"
        android:layout_height="197dp"
        android:padding="1dp"
        android:focusableInTouchMode="true"
        android:id="@+id/map_dialog_layout">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_dialog_title_height"
                android:background="@color/dialog_title_background"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:textColor="#FFE0323B"
                android:textSize="18sp"
                android:id="@+id/dialog_title"
                android:text="@string/password_change_dialog_title"
                />
            <EditText
                android:background="@color/dialog_content_background"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:textColor="#ff53514b"
                android:textSize="20sp"
                android:id="@+id/dialog_edit_text"
                android:hint="@string/verification_pw"
                android:inputType="textPassword"
                />
            <EditText
                android:background="@color/dialog_content_background"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:textColor="#ff53514b"
                android:textSize="20sp"
                android:id="@+id/dialog_edit_text_2"
                android:hint="@string/verification_pw_2"
                android:inputType="textPassword"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">
                <Button
                    style="@style/RedButton"
                    android:layout_width="169.5dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:id="@+id/dialog_negative_button"
                    android:text="@string/dialog_negative_formal"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#ff000000"/>
                <Button
                    style="@style/RedButton"
                    android:layout_width="169.5dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:id="@+id/dialog_positive_button"
                    android:text="@string/dialog_positive_formal"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <ImageButton
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_dialog_close"
        android:id="@+id/dialog_close_button"/>
</RelativeLayout>