<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown_background">
    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            style="@style/JoinEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_field"
            android:inputType="text"
            android:hint="@string/verification_name"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                style="@style/JoinEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_field"
                android:inputType="phone"
                android:hint="@string/verification_phone"/>
            <Button
                android:layout_marginRight="12dp"
                android:layout_alignParentRight="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="왜"
                android:id="@+id/phone_question"/>
        </RelativeLayout>
        <EditText
            style="@style/JoinEditText"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_field"
            android:inputType="textPassword"
            android:hint="@string/verification_pw"/>
        <LinearLayout
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:id="@+id/agreement_checkbox"
                android:button="@drawable/checkbox_selector"/>
            <TextView
                android:layout_marginLeft="4dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:id="@+id/agreement_textview"
                android:textColor="@color/agreement_text_color"/>
        </LinearLayout>
        <Button
            style="@style/JoinConfirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_auth_request"
            android:text="@string/phone_auth_request_button"
            android:enabled="false"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/phone_auth_fragment_container"/>
</RelativeLayout>