<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="342dp" android:layout_height="342dp"
    android:padding="1dp" android:background="#ffffffff">
    <RelativeLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="280dp">
        <com.teamyamm.yamm.app.YammImageView
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:id="@+id/poke_alert_image"
            />
        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="#bf000000"
            android:paddingLeft="12dp">
            <TextView
                android:layout_above="@+id/poke_alert_dish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#ffffffff"
                android:id="@+id/poke_alert_title"/>
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="12dp"
                android:textSize="30sp"
                android:textColor="#ffffffff"
                android:id="@+id/poke_alert_dish"/>
            </RelativeLayout>
        </RelativeLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/default_color"
            android:textColor="#ffffffff"
            android:textSize="24sp"
            android:text="@string/poke_alert_negative"
            android:id="@+id/poke_alert_negative"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/default_color"
            android:textColor="#ffffffff"
            android:textSize="24sp"
            android:text="@string/poke_alert_positive"
            android:id="@+id/poke_alert_positive"/>
    </LinearLayout>
    <Button
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/default_color"
        android:textColor="#ffffffff"
        android:text="@string/poke_alert_confirm"
        android:id="@+id/poke_alert_confirm"/>
</RelativeLayout>