<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="342dp" android:layout_height="237dp"
    android:background="@android:color/transparent">
    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="342dp"
        android:layout_height="197dp"
        android:padding="1dp"
        android:focusableInTouchMode="true"
        android:id="@+id/dish_search_dialog_layout">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@color/dialog_title_background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:textColor="#FFE0323B"
                    android:textSize="18sp"
                    android:id="@+id/dish_search_dialog_text"
                    android:text="@string/dish_search_pick_title"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="114dp"
                android:background="@color/dialog_content_background">
                <TextView
                    android:layout_marginTop="18dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff53514b"
                    android:textSize="16sp"
                    android:text="@string/dish_search_pick_message"/>
                <RelativeLayout
                    android:layout_width="260dp"
                    android:layout_height="45dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="19dp">
                    <AutoCompleteTextView
                        android:background="@color/place_pick_text_background"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/dish_search_autocomplete_text"/>
                    <!--
                    <ImageButton
                        android:background="@android:color/transparent"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="15dp"
                        android:layout_width="19dp"
                        android:layout_height="30dp"
                        android:src="@drawable/map_icon"
                        android:id="@+id/dish_search_icon"/>
                        -->
                </RelativeLayout>
            </RelativeLayout>
            <Button
                style="@style/RedButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="18sp"
                android:text="@string/dish_search_dialog_positive"
                android:id="@+id/dish_search_dialog_positive_button"/>
        </LinearLayout>
    </RelativeLayout>
    <ImageButton
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_dialog_close"
        android:id="@+id/dish_search_dialog_negative_button"/>
</RelativeLayout>